<resources>
    <string name="app_name">TrackerKeeper</string>
    <string name="action_settings">settings</string>
    <string name="title_activity_new_job">NewJobActivity</string>
    <string name="title_activity_job_info">JobInfoActivity</string>
    <string name="title_activity_painter_list">PainterListActivity</string>
    <string name="title_activity_workday">WorkdayActivity</string>
    <string name="title_activity_new_painter">NewPainterActivity</string>
    <string name="title_activity_add_painter">AddPainterActivity</string>
    <string name="title_activity_painter_day_info">PainterDayInfoActivity</string>
    <string name="title_activity_day_info">DayInfoActivity</string>
    <string name="title_activity_edit_painter">EditPainterActivity</string>
    <string name="title_activity_expense_list">ExpenseListActivity</string>
    <string name="title_activity_new_expense">NewExpenseActivity</string>
    <string name="title_activity_edit_job">EditJobActivity</string>

    <string name="string_painter_hours">Hours:\u0020</string>
    <string name="title_completed_dialog">Job completed</string>
    <string name="string_completed_dialog_message">Mark this job as complete?</string>
    <string name="string_button_ok">OK</string>
    <string name="string_button_cancel">CANCEL</string>
    <string name="string_days_worked">\u0020days worked</string>
    <string name="string_day_worked">\u0020day worked</string>
    <string name="header_edit_job">Edit job info</string>
    <string name="toast_job_updated">Job updated</string>
    <string name="string_edit_painter_name_prompt">Name</string>
    <string name="string_edit_painter_number_prompt">Wage</string>
    <string name="header_edit_painter">Edit worker information</string>
    <string name="toast_painter_updated">Worker updated</string>
    <string name="toast_edit_painter_name_empty">You can\'t take away their name</string>
    <string name="toast_edit_painter_number_empty">Not going to pay them anymore?</string>
    <string name="title_hours_picker">Hours</string>
    <string name="string_job_info_start_date">Start date\u0020</string>
    <string name="string_job_info_end_date">End date\u0020</string>
    <string name="string_job_info_estimated_cost">Estimated cost\u0020</string>
    <string name="string_job_info_total_cost">Total cost\u0020</string>
    <string name="toast_job_info_title_empty">You need to set a title, man</string>
    <string name="tab_completed">COMPLETED</string>
    <string name="tab_in_progress">IN PROGRESS</string>
    <string name="string_expense_name_prompt">Name</string>
    <string name="string_expense_number_prompt">Cost</string>
    <string name="header_new_expense">Add new expense</string>
    <string name="toast_expense_saved">Expense saved</string>
    <string name="toast_save_failed">Save failed</string>
    <string name="toast_expense_name_empty">The expense must have a title</string>
    <string name="toast_expense_number_empty">It had to cost something, no?</string>
    <string name="header_new_job">Create a new job</string>
    <string name="toast_job_saved">Job saved</string>
    <string name="string_new_painter_name_prompt">Name</string>
    <string name="string_new_painter_number_prompt">Wage</string>
    <string name="header_new_painter">Create a new worker</string>
    <string name="toast_painter_saved">Worker saved</string>
    <string name="toast_new_painter_name_empty">They gotta have a name</string>
    <string name="toast_new_painter_number_empty">You gotta pay them something…</string>
    <string name="string_painter_info_hours_worked">\u0020hours worked total</string>
    <string name="string_painter_info_owed">\u0020owed</string>
    <string name="string_button_add">ADD</string>
    <string name="string_button_overwrite">OVERWRITE</string>
    <string name="title_workday_exists_dialog">Workday exists</string>
    <string name="string_workday_exists_dialog_message">There is already a workday for this date. Would you like to overwrite the existing hours, or add to them?</string>
    <string name="header_add_workday">Add new workday</string>
    <string name="string_date_prompt">Date</string>
    <string name="header_expenses">Expenses</string>
    <string name="string_button_day_info">DAY INFO</string>
    <string name="string_button_expenses">EXPENSES</string>
    <string name="string_button_dismiss">DISMISS</string>
    <string name="string_job_info_painters">Workers:</string>
    <string name="string_job_info_title_prompt">Title</string>
    <string name="string_job_info_address_prompt">Address</string>
    <string name="string_job_info_start_date_prompt">Start date</string>
    <string name="string_job_info_end_date_prompt">End date</string>
    <string name="string_job_info_estimated_cost_prompt">Estimated price</string>
    <string name="string_painter_per_hour">/h</string>
    <string name="header_painter_list">Workers</string>
    <string name="string_day_info_dash">-</string>
    <string name="string_day_info_hours">hours</string>
    <string name="menu_main_workers">Workers</string>
    <string name="header_edit_expense">Edit expense information</string>
    <string name="toast_edit_expense_name_empty">The expense must have a name</string>
    <string name="toast_edit_expense_number_empty">The expense must cost something</string>
    <string name="string_edit_expense_name_prompt">Name</string>
    <string name="string_edit_expense_number_prompt">Cost</string>
    <string name="toast_expense_updated">Expense updated</string>
    <string name="title_activity_edit_expense">EditExpenseActivity</string>

    <string name="string_menu_help">Help</string>
    <string name="action_help_main">This is the main view of the application. It shows you all of your ongoing and completed jobs.\nSwipe left or right to change tabs.\n\nThe list displays a summary of each job, and you can click on one to get more information.\n\nClick and hold on a job to edit its information\n\nClicking the blue plus button in the IN PROGRESS tab will take you to another screen where you can add a new job.\n\nYou can view a list of your workers via the Workers option in the menu menu</string>
    <string name="action_help_painter_list">This is a list of your saved workers. Each item shows a worker and their wage.\n\nYou can add a new worker with the purple add button.\n\nClicking on a worker will allow you to edit that worker\'s name and/or wage.</string>
    <string name="action_help_job_info_not_complete">This screen shows a detailed summary of the job. It has the information you supplied at the top, as well as the total cost so far and the number of days worked.\nThe total cost is a sum of the workers\'s wages and the expenses.\n\nYou can view the day by day breakdown of the job with the DAY INFO button.\n\nYou can view the expenses for this job with the EXPENSES button.\n\nThe list of workers at the bottom contains all the workers currently assigned to this job. You can click on one to view more information about the amount they have worked.\n\nYou can mark this job as completed with the green checkmark button. You will be prompted to confirm this action if you do.\n\nThe blue plus button will take you to another screen to add a new work day for this job.\n\nThe purple worker button will display a list of all the workers not currently on this job, and you can select the ones you would like to assign.</string>
    <string name="action_help_job_info_complete">This screen shows a detailed summary of the job. It has the information you supplied at the top, as well as the total cost so far and the number of days worked.\nThe total cost is a sum of the worker\s wages and the expenses.\n\nYou can view the day by day breakdown of the job with the DAY INFO button.\n\nYou can view the expenses for this job with the EXPENSES button.\n\nThe list of workers at the bottom contains all the workers currently assigned to this job. You can click on one to view more information about the amount they have worked.</string>
    <string name="action_help_day_info">This shows you a summary of the days worked for the job.\nIt shows the total number of days worked, as well as a list containing all the work days.\n\nYou can click on a work day to view the workers that were present that day, and how many hours each of them worked.</string>
    <string name="action_help_expenses_completed">This shows you a list of your expenses for the job.\n\nYou can click on an expense to edit its name and/or cost.</string>
    <string name="action_help_expenses_not_completed">This shows you a list of your expenses for the job.\n\nYou can add a new expense with the blue plus button.\n\nYou can click on an expense to edit its name and/or cost.</string>
    <string name="action_help_painter_days">This shows a summary of a worker\'s activity on the job.\n\nIt has the total hours they\'ve worked, and the amount they are to be paid based on their wage.\n\nThe list of days contains the days they worked on the job, as well as how many hours they worked.</string>
    <string name="action_help_new_job">You can enter the job\'s information here. Only a title and start date are necessary. All other fields can be left blank. The job details can be edited and added later.\n\nYou can select workers from the list which you would like to assign to the job. More painters can be added later.</string>

</resources>
