<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context="com.shane.timesheets.views.JobInfoEntryActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_job_info_title_prompt"
        style="@style/text_prompt"
        android:id="@+id/text_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_title"
        style="@style/text_option"
        android:inputType="textCapSentences"
        android:layout_below="@+id/text_title"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_job_info_address_prompt"
        style="@style/text_prompt"
        android:id="@+id/text_address"
        android:layout_below="@+id/edit_title"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_address"
        style="@style/text_option"
        android:layout_below="@+id/text_address"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_job_info_start_date_prompt"
        style="@style/text_prompt"
        android:id="@+id/text_start_date"
        android:layout_below="@+id/edit_address"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_start_date"
        style="@style/text_option"
        android:inputType="date"
        android:focusable="false"
        android:layout_below="@+id/text_start_date"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_job_info_end_date_prompt"
        style="@style/text_prompt"
        android:id="@+id/text_end_date"
        android:layout_below="@+id/edit_start_date"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_end_date"
        style="@style/text_option"
        android:inputType="date"
        android:focusable="false"
        android:layout_below="@+id/text_end_date"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_job_info_estimated_cost_prompt"
        style="@style/text_prompt"
        android:id="@+id/text_cost"
        android:layout_below="@+id/edit_end_date"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_cost"
        style="@style/text_option"
        android:inputType="numberDecimal"
        android:layout_below="@+id/text_cost"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_prompt"
        android:text="@string/string_job_info_painters"
        android:id="@+id/text_painters"
        android:layout_below="@+id/edit_cost"/>

</RelativeLayout>
